# tiny-cache-py

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  cache.proto  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_client.py  tox.ini
.github/workflows/: ci.yml
docs/: api-contract.md  architecture.md  code-review.md  codebase.md  specification.md
examples/: manual_client.py
scripts/: fix_protoc_imports.py
tests/: benchmark_client.py  test_client.py  test_integration.py
tiny_cache_py/: __init__.py  cache_pb2.py  cache_pb2.pyi  cache_pb2_grpc.py  cache_pb2_grpc.pyi  client.py  config.py  errors.py  serialization.py
